--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "package": "vsce package --no-dependencies"
   },
   "dependencies": {
-    "langium": "^3.5.0",
+    "langium": "3.4.0",
+    "typir": "^0.2.1",
+    "typir-langium": "^0.2.1",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1"
   },
