--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/vscode": "^1.102.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "chalk": "^5.4.1",
     "concurrently": "^9.2.0",
     "esbuild": "^0.25.8",
     "eslint": "^9.31.0",
