--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "package": "vsce package --no-dependencies"
   },
   "dependencies": {
-    "langium": "3.4.0",
+    "langium": "^3.5.0",
     "typir": "^0.2.1",
     "typir-langium": "^0.2.1",
     "vscode-languageclient": "^9.0.1",
@@ -65,5 +65,10 @@
     "eslint": "^9.31.0",
     "langium-cli": "^3.5.2",
     "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "langium": "^3.5.0"
+    }
   }
 }
